@startuml
class AdManager {
    - androidGameId : string = "YOUR_ANDROID_GAME_ID"
    - iOSGameId : string = "YOUR_IOS_GAME_ID"
    - testMode : bool = true
    - gameId : string
    - bannerAndroidAdUnitId : string = "Banner_Android"
    - bannerIOSAdUnitId : string = "Banner_iOS"
    - bannerAdUnitId : string
    - bannerLoaded : bool = false
    - interstitialAndroidAdUnitId : string = "Interstitial_Android"
    - interstitialIOSAdUnitId : string = "Interstitial_iOS"
    - interstitialAdUnitId : string
    - interstitialLoaded : bool = false
    - rewardedAndroidAdUnitId : string = "Rewarded_Android"
    - rewardedIOSAdUnitId : string = "Rewarded_iOS"
    - rewardedAdUnitId : string
    - rewardedLoaded : bool = false
    - lastShowingAdUnitId : string = null
    - Awake() : void
    + InitializeAds() : void
    + OnInitializationComplete() : void
    + OnInitializationFailed(error:UnityAdsInitializationError, message:string) : void
    + LoadBanner() : void
    + ShowBanner() : void
    + HideBanner() : void
    - OnBannerLoaded() : void
    - OnBannerError(message:string) : void
    - OnBannerClicked() : void
    - OnBannerShown() : void
    - OnBannerHidden() : void
    + LoadInterstitial() : void
    + ShowInterstitial() : void
    + LoadRewarded() : void
    + ShowRewarded() : void
    + OnUnityAdsAdLoaded(adUnitId:string) : void
    + OnUnityAdsFailedToLoad(adUnitId:string, error:UnityAdsLoadError, message:string) : void
    + OnUnityAdsShowFailure(adUnitId:string, error:UnityAdsShowError, message:string) : void
    + OnUnityAdsShowStart(adUnitId:string) : void
    + OnUnityAdsShowClick(adUnitId:string) : void
    + OnUnityAdsShowComplete(adUnitId:string, showCompletionState:UnityAdsShowCompletionState) : void
    - GrantReward() : void
}
class "SingletonManager`1"<T> {
}
"SingletonManager`1" "<AdManager>" <|-- AdManager
IUnityAdsInitializationListener <|-- AdManager
IUnityAdsLoadListener <|-- AdManager
IUnityAdsShowListener <|-- AdManager
AdManager o-> "bannerPosition" BannerPosition
class AIPawn {
    - m_Destination : Vector3?
    + Destination : Vector3? <<get>>
    - m_Speed : float = 5f
    - Update() : void
    + SetDestination(destination:Vector3) : void
}
MonoBehaviour <|-- AIPawn
class GameManager {
    + IsUnitSelected : bool <<get>>
    - Start() : void
    - Update() : void
    + StartBuildProcess(buildActionSO:BuildActionSO) : void
    - HasClickedOnUnit(hit:RaycastHit2D, _unit:Unit) : bool
    - DetectClick(_inputPosition:Vector2) : void
    - HandleClickOnGround(worldPosition:Vector2) : void
    - HandleClickOnUnit(unit:Unit) : void
    - SelectNewUnit(unit:Unit) : void
    - HasClickedOnActiveUnit(clickedUnit:Unit) : bool
    - IsHumanoid(unit:Unit) : bool
    - Displayeffect(worldPoint:Vector2) : void
    - CancelActiveUnit() : void
    - ShowUnitAction(unit:Unit) : void
    - ClearActionBarUI() : void
}
class "SingletonManager`1"<T> {
}
"SingletonManager`1" "<GameManager>" <|-- GameManager
GameManager --> "pointToClickPrefab" PointToClick
GameManager --> "actionBar" ActionBar
GameManager --> "activeUnit" Unit
GameManager --> "touchPosition" Vector2
GameManager --> "placementProcess" PlacementProcess
abstract class "SingletonManager`1"<T> {
    - {static} instance : T
    + {static} Instance : T <<get>>
}
MonoBehaviour <|-- "SingletonManager`1"
class ActionBar {
    - Awake() : void
    + RegisterAction(icon:Sprite, action:UnityAction) : void
    + ClearActions() : void
    + Show() : void
    + Hide() : void
}
class "List`1"<T> {
}
MonoBehaviour <|-- ActionBar
ActionBar --> "_image" Image
ActionBar --> "_actionButtonPrefab" ActionButton
ActionBar --> "_originalColor" Color
ActionBar o-> "actionBtns<ActionButton>" "List`1"
class ActionButton {
    - Oestroy() : void
    + Init(icon:Sprite, action:UnityAction) : void
}
MonoBehaviour <|-- ActionButton
ActionButton --> "_iconImage" Image
ActionButton --> "_buttonImage" Button
class PointToClick {
    - duration : float = 1f
    - timer : float
    - freqTimer : float
    - Start() : void
    - Update() : void
}
MonoBehaviour <|-- PointToClick
PointToClick --> "spriteRenderer" SpriteRenderer
PointToClick --> "scaleCurve" AnimationCurve
PointToClick --> "initialScale" Vector3
class HumanoidUnit {
    + CurrentSpeed : float <<get>>
    - Start() : void
    # Update() : void
}
Unit <|-- HumanoidUnit
HumanoidUnit --> "velocity" Vector2
HumanoidUnit --> "lastPosition" Vector3
abstract class Unit {
    # isMoving : bool
    # isTargeted : bool
    # Awake() : void
    + MoveToPosition(position:Vector3) : void
    + Select() : void
    + Deselect() : void
    - HighLight() : void
    - UnHighLight() : void
}
MonoBehaviour <|-- Unit
Unit --> "animator" Animator
Unit --> "_aiPawn" AIPawn
Unit --> "_spriteRenderer" SpriteRenderer
Unit --> "originalMaterial" Material
Unit --> "highlightMaterial" Material
class PlacementProcess {
    + PlacementProcess(buildActionSO:BuildActionSO)
    + Update() : void
    + ShowPlacementOutline() : void
}
PlacementProcess --> "placementOutline" GameObject
PlacementProcess --> "_buildActionSO" BuildActionSO
class Utilis <<static>> {
    + {static} IsLeftClickOrTapDown : bool <<get>>
    + {static} IsLeftClickOrTapUp : bool <<get>>
    + {static} TryGetShortClickPosition(inputPosition:Vector2, maxDistance:float) : bool
    + {static} TryGetHoldPosition(worldPosition:Vector3) : bool
    + {static} IsPointerOverUIElement() : bool
}
Utilis --> "touchPosition" Vector2
Utilis --> "InputPosition" Vector2
abstract class ActionSO {
    + ActionName : string
    + Guid : string
    + {abstract} Execute(gameManager:GameManager) : void
}
ScriptableObject <|-- ActionSO
ActionSO --> "Icon" Sprite
class BuildActionSO {
    - goldCost : int
    - woodCost : int
    + GoldCost : int <<get>>
    + WoodCost : int <<get>>
    + <<override>> Execute(gameManager:GameManager) : void
}
ActionSO <|-- BuildActionSO
BuildActionSO --> "placementSprite" Sprite
BuildActionSO --> "foundationSprite" Sprite
BuildActionSO --> "completionSprite" Sprite
BuildActionSO --> "PlacementSprite" Sprite
BuildActionSO --> "FoundationSprite" Sprite
BuildActionSO --> "ComletionSprite" Sprite
@enduml
